--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
             </div>
             <h3 class="card-title">Braille Image to Text</h3>
             <p class="card-text">Detect Braille patterns in images and convert them to readable text with text-to-speech capability.</p>
-            <a href="https://braille-speech-converter.onrender.com" class="btn btn-primary mt-3">Try It</a>
+            <button class="btn btn-primary mt-3" onclick="window.location.href='https://braille-speech-converter.onrender.com';">Try It</button>
         </div>
     </div>
 </div>
