--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
             </div>
             <h3 class="card-title">Image to Braille</h3>
             <p class="card-text">Extract text from images and convert it to Braille. Supports various image formats.</p>
-            <button class="btn btn-primary mt-3" onclick="window.location.href='http://image-to-braille-production.up.railway.app';">Try It</button>
+            <button class="btn btn-primary mt-3" onclick="window.location.href='https://image-to-braille-new-1.onrender.com/';">Try It</button>
 
         </div>
     </div>
