--- a/templates/index.html
+++ b/templates/index.html
@@ -85,20 +85,6 @@
     </div>
 </div>
 
-
-                <!-- Braille to Speech Card -->
-                <div class="col-md-3 mb-4">
-                    <div class="card service-card bg-dark text-white">
-                        <div class="card-body text-center">
-                            <div class="service-icon">
-                                <i class="fas fa-volume-up"></i>
-                            </div>
-                            <h3 class="card-title">Braille to Speech</h3>
-                            <p class="card-text">Convert Braille characters to text and have it read aloud using text-to-speech technology.</p>
-                            <a href="/braille-to-speech" class="btn btn-primary mt-3">Try It</a>
-                        </div>
-                    </div>
-                </div>
                 
                 <!-- Braille Image to Text Card -->
 <div class="col-md-3 mb-4">
@@ -109,7 +95,7 @@
             </div>
             <h3 class="card-title">Braille Image to Text</h3>
             <p class="card-text">Detect Braille patterns in images and convert them to readable text with text-to-speech capability.</p>
-            <button class="btn btn-primary mt-3" onclick="window.location.href='https://braille-speech-converter.onrender.com';">Try It</button>
+            <button class="btn btn-primary mt-3" onclick="window.location.href='https://upd-image-to-braille-1.onrender.com/';">Try It</button>
         </div>
     </div>
 </div>
